--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,13 @@ repositories {
         name = 'minecraft-repo'
         url = 'https://libraries.minecraft.net/'
     }
+    mavenCentral()
 }
 
 dependencies {
     compileOnly "io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT"
     compileOnly 'com.mojang:authlib:1.5.25'
+    compileOnly 'fr.minuskube.inv:smart-invs:1.2.7'
 }
 
 def targetJavaVersion = 17
