Implement SQLite Database Class

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compileOnly 'fr.minuskube.inv:smart-invs:1.2.7'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
     implementation 'com.jeff-media:custom-block-data:2.2.2'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.42.0.0'
 }
 
 shadowJar {
@@ -46,6 +47,7 @@ shadowJar {
         include(dependency('com.fasterxml.jackson.core:jackson-core:2.13.0'))
         include(dependency('com.fasterxml.jackson.core:jackson-annotations:2.13.0'))
         include(dependency('com.jeff-media:custom-block-data:2.2.2'))
+        include(dependency('org.xerial:sqlite-jdbc:3.42.0.0'))
     }
     relocate 'com.jeff_media.customblockdata', 'fr.elite.customblockdata'
 }
